[code] Work on Home Screen compact content. - implemented ConstraintLayout to get Image and Surface component linked - animation is integrated but not working smoothly  with image constrained to surface - fixed modifier passing to get HomeScreen filling correct space

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,4 +218,11 @@
         Neon Grow Labs, Level 5, is a high-tech fabrication hub with glowing mycelium walls. Visitors praise its futuristic aesthetic and the ability to quickly prototype sustainable designs.
     </string>
 
+
+    <string name="home_city_description">Cloudburst is a living organism, its bones grown from mycelium. It feeds from a controlled microclimate, generating an ecological delirium. Iconic streaks of cloud weave above radiant canals, where neon capsules skim the waters, tracing paths through mycelium quarters.
+
+    From within this glow you can hear the neon streams flow. And with it, the quiet hum of AI nodes - whizzing orbs that reimagine the world with alien codes.
+
+    Cloudburst is where technology, ecology, and beauty are forever interwoven — a solar sanctuary designed to grow, breathe, and shimmer like a being newly awoken. </string>
+
 </resources>
