[refactor(home)]: Animate home screen constraints and refine UI
Improves the compact home screen animation by adopting decoupled
ConstraintSets, ensuring the image and text box animate smoothly
together. Also refactors the UI for a cleaner look and better
resource management.

- Replaced inline conditional constraints with two distinct
  ConstraintSets (collapsed and expanded) to fix animation snapping.
- Utilized the nimateChangesSpec and constraintSet parameters  on the ConstraintLayout
  to enable smooth transitions between states based on those ConstraintSets.
- Extracted hardcoded values into dimens and string resources.
- Adjusted padding and refined shapes for a more polished visual
  presentation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Cloudburst</string>
 
+    <!-- Button Components -->
+    <string name="explore_button">Explore</string>
+
     <!-- Navigation Headers -->
     <string name="home">Home</string>
     <string name="restaurant_header">Restaurants</string>
